gitops/demo-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-dashboard
  namespace: demo-dashboard
  labels:
    app: resource-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-dashboard
  template:
    metadata:
      labels:
        app: resource-dashboard
    spec:
      serviceAccountName: resource-dashboard
      containers:
        - name: resource-dashboard
          image: image-registry.openshift-image-registry.svc:5000/demo-builds/resource-dashboard:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
