gitops/demo-dashboard/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: resource-dashboard
  namespace: demo-dashboard
spec:
  to:
    kind: Service
    name: resource-dashboard
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
